# resman-lite

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: ResASTJsonParser.h  ResBuildOrchestrator.h  ResCppSrcGenerator.h  ResHeaderParser.h  ResObjGenerator.h  resman.h  resource-lite.h
src/: ResASTJsonParser.cpp  ResBuildOrchestrator.cpp  ResCppSrcGenerator.cpp  ResHeaderParser.cpp  ResObjGenerator.cpp  main.cpp  resman-lite.cpp
